--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a6d1ae">  <td>20/01/27 15:30:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7921b0a2]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1282473384</td>   <td></td> </tr>
-<tr bgcolor="7f989e">  <td>20/01/27 15:31:00</td>   <td>13955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingInitialise1()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7921b0a2]">bookingInitialise1</td> 
-  <td>main@1282473384</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>20/01/29 11:36:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@61f8bee4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
+<tr bgcolor="99f37e">  <td>20/01/29 11:36:47</td>   <td>15082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingSingleRoom1Adult1Child()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@61f8bee4]">bookingSingleRoom1Adult1Child</td> 
+  <td>main@85777802</td>   <td></td> </tr>
 </table>
