--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99f37e">  <td>20/01/29 11:36:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingSingleRoom1Adult1Child()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@61f8bee4]">bookingSingleRoom1Adult1Child</td> 
+<tr bgcolor="99f37e">  <td>20/01/29 12:22:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingSingleRoom1Adult1Child()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@61f8bee4]">bookingSingleRoom1Adult1Child</td> 
   <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/01/29 11:36:32</td>   <td>-15082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@61f8bee4]">&gt;&gt;setUp</td> 
+<tr bgcolor="99f37e">  <td>20/01/29 12:24:47</td>   <td>108567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingSingleRoomWith3Adults()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@61f8bee4]">bookingSingleRoomWith3Adults</td> 
+  <td>main@85777802</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>20/01/29 12:22:43</td>   <td>-15705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@61f8bee4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>20/01/29 12:24:33</td>   <td>94275</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@61f8bee4]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
 </table>
