--- a/test-output/index.html
+++ b/test-output/index.html
@@ -5,7 +5,7 @@
   <meta charset='utf-8'>
   <title>TestNG reports</title>
 
-    <link type="text/css" href="testng-reports.css" rel="stylesheet" />  
+    <link type="text/css" href="testng-reports.css" rel="stylesheet" />
     <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="testng-reports.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\pramo\AppData\Local\Temp\testng-eclipse--1957467669\testng-customsuite.xml</span>
+                    <span>C:\Users\IQA\AppData\Local\Temp\testng-eclipse-900582698\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tripmasters.framework.testScript.BookingPageTest" hash-for-method="bookingSingleRoom1Adult1Child">bookingSingleRoom1Adult1Child</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tripmasters.framework.testScript.BookingPageTest" hash-for-method="bookingSingleRoomWith3Adults">bookingSingleRoomWith3Adults</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tripmasters.framework.testScript.BookingPageTest" hash-for-method="withoutAirBookingForSingleCity">withoutAirBookingForSingleCity</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,16 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="bookingSingleRoom1Adult1Child">
-                  </a> <!-- bookingSingleRoom1Adult1Child -->
-                  <span class="method-name">bookingSingleRoom1Adult1Child</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="bookingSingleRoomWith3Adults">
-                  </a> <!-- bookingSingleRoomWith3Adults -->
-                  <span class="method-name">bookingSingleRoomWith3Adults</span>
+                  <a name="withoutAirBookingForSingleCity">
+                  </a> <!-- withoutAirBookingForSingleCity -->
+                  <span class="method-name">withoutAirBookingForSingleCity</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,14 +135,14 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\pramo\AppData\Local\Temp\testng-eclipse--1957467669\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\IQA\AppData\Local\Temp\testng-eclipse-900582698\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
-  &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.tripmasters.framework.testScript.BookingPageTest&quot;/&gt;
     &lt;/classes&gt;
@@ -196,20 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'bookingSingleRoomWith3Adults')
+data.setCell(0, 1, 'withoutAirBookingForSingleCity')
 data.setCell(0, 2, 'com.tripmasters.framework.testScript.BookingPageTest')
-data.setCell(0, 3, 101634);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'bookingSingleRoom1Adult1Child')
-data.setCell(1, 2, 'com.tripmasters.framework.testScript.BookingPageTest')
-data.setCell(1, 3, 94274);
+data.setCell(0, 3, 28539);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 minutes</span>
+              <span class="suite-total-time">Total running time: 28 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -241,16 +225,8 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">bookingSingleRoom1Adult1Child</span>
-                <span class="method-start">15706 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">109981 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">bookingSingleRoomWith3Adults</span>
-                <span class="method-start">124272 ms</span>
+                <span class="method-name">withoutAirBookingForSingleCity</span>
+                <span class="method-start">9363 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
