--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\IQA\AppData\Local\Temp\testng-eclipse-900582698\testng-customsuite.xml</span>
+                    <span>C:\Users\IQA\AppData\Local\Temp\testng-eclipse-1715553464\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tripmasters.framework.testScript.BookingPageTest" hash-for-method="withoutAirBookingForSingleCity">withoutAirBookingForSingleCity</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tripmasters.framework.testScript.BookingPageTest" hash-for-method="dateChanging">dateChanging</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="withoutAirBookingForSingleCity">
-                  </a> <!-- withoutAirBookingForSingleCity -->
-                  <span class="method-name">withoutAirBookingForSingleCity</span>
+                  <a name="dateChanging">
+                  </a> <!-- dateChanging -->
+                  <span class="method-name">dateChanging</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\IQA\AppData\Local\Temp\testng-eclipse-900582698\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\IQA\AppData\Local\Temp\testng-eclipse-1715553464\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'withoutAirBookingForSingleCity')
+data.setCell(0, 1, 'dateChanging')
 data.setCell(0, 2, 'com.tripmasters.framework.testScript.BookingPageTest')
-data.setCell(0, 3, 28539);
+data.setCell(0, 3, 48279);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 28 seconds</span>
+              <span class="suite-total-time">Total running time: 48 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -225,8 +225,8 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">withoutAirBookingForSingleCity</span>
-                <span class="method-start">9363 ms</span>
+                <span class="method-name">dateChanging</span>
+                <span class="method-start">7148 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
