--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b590b9">  <td>20/01/30 09:44:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@6c49835d]">&gt;&gt;setUp</td> 
+<tr bgcolor="b590b9">  <td>20/01/31 17:29:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@6c49835d]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@712256162</td>   <td></td> </tr>
-<tr bgcolor="939fd1">  <td>20/01/30 09:44:14</td>   <td>9362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.withoutAirBookingForSingleCity()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@6c49835d]">withoutAirBookingForSingleCity</td> 
+<tr bgcolor="939fd1">  <td>20/01/31 17:30:06</td>   <td>7147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.dateChanging()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@6c49835d]">dateChanging</td> 
   <td>main@712256162</td>   <td></td> </tr>
 </table>
