--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,8 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="83a2f9">  <td>20/01/27 16:44:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@3d99d22e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@1640625171</td>   <td></td> </tr>
-<tr bgcolor="efea79">  <td>20/01/27 16:44:21</td>   <td>14450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingInitialise()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@3d99d22e]">bookingInitialise</td> 
-  <td>TestNG-test=Test-1@1640625171</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>20/02/01 10:36:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@3701eaf6]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>pool-1-thread-1@1908012</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/01 10:37:17</td>   <td>50513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingFlightAndHotelForSingleCity(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@3701eaf6]">bookingFlightAndHotelForSingleCity</td> 
+  <td>pool-1-thread-2@84273867</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/01 10:37:17</td>   <td>50513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingSingleRoomWith3Adults(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@3701eaf6]">bookingSingleRoomWith3Adults</td> 
+  <td>pool-1-thread-5@1671461774</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/01 10:37:17</td>   <td>50513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.booking2Room2Adult2Child(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@3701eaf6]">booking2Room2Adult2Child</td> 
+  <td>pool-1-thread-1@1908012</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/01 10:37:17</td>   <td>50513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingFlightsWithmultipleCities(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@3701eaf6]">bookingFlightsWithmultipleCities</td> 
+  <td>pool-1-thread-3@210419207</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/01 10:37:17</td>   <td>50513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingSingleRoom1Adult1Child(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@3701eaf6]">bookingSingleRoom1Adult1Child</td> 
+  <td>pool-1-thread-4@1270161464</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/01 10:37:18</td>   <td>51640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingTwoRoom2Adult(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@3701eaf6]">bookingTwoRoom2Adult</td> 
+  <td>pool-1-thread-6@184853927</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/01 10:37:19</td>   <td>52393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingTwoRoom3Adult1Child(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@3701eaf6]">bookingTwoRoom3Adult1Child</td> 
+  <td>pool-1-thread-7@1850211862</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/01 10:37:19</td>   <td>53106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.getWithoutAir(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@3701eaf6]">getWithoutAir</td> 
+  <td>pool-1-thread-8@2143568985</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>20/02/01 10:37:23</td>   <td>56950</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@3701eaf6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>pool-1-thread-8@2143568985</td>   <td></td> </tr>
 </table>
