--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,73 +4,29 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.tripmasters.framework.testScript.BookingPageTest</td>
+<td>com.tripmasters.framework.testScript.BookingPageTestScript</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<<<<<<< HEAD
-<td>bookingTwoRoom3Adult1Child</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>getWithoutAir</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingSingleRoomWith3Adults</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingFlightsWithmultipleCities</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingTwoRoom2Adult</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>withoutAirBookingForSingleCity</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingSingleRoom1Adult1Child</td>
-=======
-<<<<<<< HEAD
-<td>bookingMultipleCityWithoutAir</td>
-=======
-<td>getWithoutAir</td>
->>>>>>> 22e9ecc02be1c6f0a520a031d40368ff263c5368
->>>>>>> 1ca0d8bf2a4347fe44357d5cd5c47cd789d0f1d0
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingFlightAndHotelForSingleCity</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>booking2Room2Adult2Child</td>
+<td>dateChanging_TC_9</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>setUp</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
 </table>
