--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,40 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99f37e">  <td>20/02/04 18:26:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.VerifyPopularVacationPackages_TC_13(java.lang.reflect.Method)[pri:2, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">VerifyPopularVacationPackages_TC_13</td> 
-  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/04 18:24:59</td>   <td>-75093</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/04 18:25:23</td>   <td>-50334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/04 18:25:59</td>   <td>-14912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/04 18:26:23</td>   <td>9469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/04 18:26:53</td>   <td>38901</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/04 18:27:23</td>   <td>69552</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/04 18:25:19</td>   <td>-54441</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/04 18:25:55</td>   <td>-18993</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/04 18:26:23</td>   <td>9384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/04 18:26:52</td>   <td>38824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/04 18:27:19</td>   <td>65459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/04 18:27:38</td>   <td>83867</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/04 18:26:38</td>   <td>24475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyCity_TC_10()[pri:3, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">verifyCity_TC_10</td> 
-  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/04 18:27:37</td>   <td>83821</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyFooterText_TC_16()[pri:5, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">verifyFooterText_TC_16</td> 
-  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/04 18:25:15</td>   <td>-58833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyMoreHighlightAndAttractionLinks_TC_11(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">verifyMoreHighlightAndAttractionLinks_TC_11</td> 
-  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/04 18:25:38</td>   <td>-35448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyOtherVacationPackages_TC_12(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">verifyOtherVacationPackages_TC_12</td> 
-  <td>main@85777802</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/04 18:27:07</td>   <td>52957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyStartAgainLink_TC_15()[pri:4, instance:com.tripmasters.framework.testScript.HomePageTestScript@61f8bee4]">verifyStartAgainLink_TC_15</td> 
-  <td>main@85777802</td>   <td></td> </tr>
+<tr bgcolor="99f37e">  <td>20/02/05 09:07:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.dateChanging_TC_9()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@4f970963]">dateChanging_TC_9</td> 
+  <td>main@133250414</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>20/02/05 09:06:51</td>   <td>-20542</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@4f970963]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@133250414</td>   <td></td> </tr>
 </table>
