--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7ec378">  <td>20/02/05 08:24:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@43814d18]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@1672707456</td>   <td></td> </tr>
-<tr bgcolor="958a8d">  <td>20/02/05 08:25:25</td>   <td>29529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.withoutAirBookingForSingleCity_TC_19(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@43814d18]">withoutAirBookingForSingleCity_TC_19</td> 
-  <td>pool-1-thread-1@1672707456</td>   <td></td> </tr>
-<tr bgcolor="7ec378">  <td>20/02/05 08:26:02</td>   <td>66578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@43814d18]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@1672707456</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>20/02/05 09:02:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@43814d18]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@1035457853</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/05 09:02:55</td>   <td>19866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.dateChanging_TC_9()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@43814d18]">dateChanging_TC_9</td> 
+  <td>pool-1-thread-1@1035457853</td>   <td></td> </tr>
 </table>
