Implementation of Exceptions,Logs,Groups,Generics

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,12 +11,13 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<<<<<<< HEAD
-<td>verifyMoreHighlightAndAttractionLinks_TC_11</td>
-=======
-<td>dateChanging_TC_9</td>
->>>>>>> 809dc1012df87ae4db2b86e78d22d47e0d004609
+<td>verifyOtherVacationPackages_TC_12</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyMoreHighlightAndAttractionLinks_TC_11</td>
+<td>smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
