--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -11,28 +11,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyFooterText_TC_16</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>VerifyPopularVacationPackages_TC_13</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>verifyOtherVacationPackages_TC_12</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyCity_TC_10</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyStartAgainLink_TC_15</td>
-<td>&nbsp;</td></tr>
+<td>regression </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyMoreHighlightAndAttractionLinks_TC_11</td>
-<td>&nbsp;</td></tr>
+<td>smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
