Code Refactor Sill Going On.

--- a/ExtentReportResults.html
+++ b/ExtentReportResults.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-02-11 12:42:34</span>
+					<span class='suite-started-time'>2020-02-11 14:25:05</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 1m 58s+741ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 1m 55s+845ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 1m 58s+741ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 1m 55s+845ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-02-11 12:40:35</span> 
+							<span class='panel-lead suite-started-time'>2020-02-11 14:23:09</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-02-11 12:42:34</span> 
+							<span class='panel-lead suite-ended-time'>2020-02-11 14:25:05</span> 
 						</div> 
 					</div>
 				</div>
@@ -168,7 +168,7 @@
 								<tbody>
 										<tr>
 											<td>User Name</td>
-											<td>Kalpana</td>
+											<td>IQA</td>
 										</tr>
 										<tr>
 											<td>OS</td>
@@ -180,7 +180,7 @@
 										</tr>
 										<tr>
 											<td>Host Name</td>
-											<td>LAPTOP-2MH85CIV</td>
+											<td>IQA_Shivam</td>
 										</tr>
 										<tr>
 											<td>ProjectName</td>
@@ -249,15 +249,15 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='b8603d9a-7f93-4aca-80cf-04f72ac3b26f'>
+										<li class='collection-item test displayed active pass ' extentid='b7ef595b-47ba-4908-989f-d667da78b7fc'>
 											<div class='test-head'>
-												<span class='test-name'>bookingSingleRoomWith3Adults_TC_1 </span>
+												<span class='test-name'>bookingSingleRoomWithThreeAdults_TC_1 </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-02-11 12:40:35</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-02-11 14:23:09</span>
 													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
 													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 												</div>
@@ -276,27 +276,27 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>12:40:50</td>
+																	<td class='timestamp'>14:23:24</td>
 																	<td class='step-details'>Booking details Source & Destination filled successfully for 3 Adults_4nights</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>12:41:23</td>
+																	<td class='timestamp'>14:23:57</td>
 																	<td class='step-details'>User select cheaper flight option</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>12:42:22</td>
-																	<td class='step-details'>User fills all the 3 passenger details</td>
+																	<td class='timestamp'>14:24:55</td>
+																	<td class='step-details'>User filled all the passenger details successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>12:42:29</td>
+																	<td class='timestamp'>14:25:02</td>
 																	<td class='step-details'>Flights & passenger details verified successfully on PaymentPage</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>12:42:29</td>
+																	<td class='timestamp'>14:25:02</td>
 																	<td class='step-details'>Test passed</td>
 																</tr>
 														</tbody>
