--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>E:\Cdata\workspace\TripMaster_FinalFramework\TripMasters\testng.xml</span>
+                    <span>D:\TripMasters\TripMaster-Code\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.tripmasters.framework.testScript.BookingPageTestScript" hash-for-method="bookingSingleRoomWith3Adults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWith3Adults_...)">bookingSingleRoomWith3Adults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWith3Adults_...)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.tripmasters.framework.testScript.BookingPageTestScript" hash-for-method="bookingSingleRoomWithThreeAdults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdu...)">bookingSingleRoomWithThreeAdults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdu...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -125,10 +125,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="bookingSingleRoomWith3Adults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWith3Adults_...)">
-                  </a> <!-- bookingSingleRoomWith3Adults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWith3Adults_...) -->
-                  <span class="method-name">bookingSingleRoomWith3Adults_TC_1</span>
-                  <span class="parameters">(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWith3Adults_TC_1(java.lang.reflect.Method) throws java.lang.Exception)</span>
+                  <a name="bookingSingleRoomWithThreeAdults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdu...)">
+                  </a> <!-- bookingSingleRoomWithThreeAdults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdu...) -->
+                  <span class="method-name">bookingSingleRoomWithThreeAdults_TC_1</span>
+                  <span class="parameters">(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method) throws java.lang.Exception)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">E:\Cdata\workspace\TripMaster_FinalFramework\TripMasters\testng.xml</span>
+            <span class="header-content">D:\TripMasters\TripMaster-Code\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -184,7 +184,7 @@
               <span class="test-group-name">smoke</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">bookingSingleRoomWith3Adults_TC_1</span>
+                <span class="method-in-group-name">bookingSingleRoomWithThreeAdults_TC_1</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -206,9 +206,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'bookingSingleRoomWith3Adults_TC_1')
+data.setCell(0, 1, 'bookingSingleRoomWithThreeAdults_TC_1')
 data.setCell(0, 2, 'com.tripmasters.framework.testScript.BookingPageTestScript')
-data.setCell(0, 3, 114173);
+data.setCell(0, 3, 113074);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -245,12 +245,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">bookingSingleRoomWith3Adults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWith3Adults_...)</span>
-                <span class="method-start">17870 ms</span>
+                <span class="method-name">bookingSingleRoomWithThreeAdults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdu...)</span>
+                <span class="method-start">10461 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">132046 ms</span>
+                <span class="method-start">123536 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
