--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6bc464">  <td>20/02/11 15:37:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@50c87b21]">bookingSingleRoomWithThreeAdults_TC_1</td> 
-  <td>pool-1-thread-1@1760015423</td>   <td></td> </tr>
-<tr bgcolor="6773bc">  <td>20/02/11 15:37:46</td>   <td>-9834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@50c87b21]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@1760015423</td>   <td></td> </tr>
-<tr bgcolor="6773bc">  <td>20/02/11 15:39:18</td>   <td>81770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@50c87b21]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@1760015423</td>   <td></td> </tr>
+<tr bgcolor="b9c4b8">  <td>20/02/12 14:01:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2b552920]">bookingSingleRoomWithThreeAdults_TC_1</td> 
+  <td>pool-1-thread-1@316636500</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>20/02/12 14:01:05</td>   <td>-15271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2b552920]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@316636500</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>20/02/12 14:03:24</td>   <td>123866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@627551fb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-3@799340541</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>20/02/12 14:03:48</td>   <td>147076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@627551fb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-3@799340541</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>20/02/12 14:03:20</td>   <td>119753</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2b552920]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@316636500</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>20/02/12 14:03:44</td>   <td>142990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@627551fb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-3@799340541</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>20/02/12 14:04:18</td>   <td>177791</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@627551fb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-3@799340541</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/12 14:03:39</td>   <td>138407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyMoreHighlightAndAttractionLinks_TC_11(java.lang.reflect.Method)[pri:15, instance:com.tripmasters.framework.testScript.HomePageTestScript@627551fb]">verifyMoreHighlightAndAttractionLinks_TC_11</td> 
+  <td>pool-1-thread-2@1798850919</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>20/02/12 14:04:02</td>   <td>161473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyOtherVacationPackages_TC_12(java.lang.reflect.Method)[pri:16, instance:com.tripmasters.framework.testScript.HomePageTestScript@627551fb]">verifyOtherVacationPackages_TC_12</td> 
+  <td>pool-1-thread-3@799340541</td>   <td></td> </tr>
 </table>
