--- a/test-output/index.html
+++ b/test-output/index.html
@@ -38,11 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Default_suite">
-<<<<<<< HEAD
-              <span class="suite-name border-passed">Default suite</span>
-=======
               <span class="suite-name border-failed">Default suite</span>
->>>>>>> 16081c7894f3e57fc6b606d1e526ad4eaabb03e7
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -53,11 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-<<<<<<< HEAD
-                    <span>testng-customsuite.xml</span>
-=======
-                    <span>C:\Users\91807\AppData\Local\Temp\testng-eclipse--657964487\testng-customsuite.xml</span>
->>>>>>> 16081c7894f3e57fc6b606d1e526ad4eaabb03e7
+                    <span>C:\Users\91807\AppData\Local\Temp\testng-eclipse--1199647052\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,33 +94,18 @@
                     <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
-<<<<<<< HEAD
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
-=======
                     <span class="method-list-title failed">Failed methods</span>
                     <span class="show-or-hide-methods failed">
                       <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
                       <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
->>>>>>> 16081c7894f3e57fc6b606d1e526ad4eaabb03e7
                     </span>
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
-<<<<<<< HEAD
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tripmasters.framework.testScript.BookingPageTestScript" hash-for-method="bookingTwoRoomTwoAdult_TC_3(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomTwoAdult_TC_3(j...)">bookingTwoRoomTwoAdult_TC_3(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomTwoAdult_TC_3(j...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
-=======
                         <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tripmasters.framework.testScript.BookingPageTestScript" hash-for-method="bookingSingleRoomOneAdultOneChild_TC_2(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomOneAdultOneC...)">bookingSingleRoomOneAdultOneChild_TC_2(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomOneAdultOneC...)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tripmasters.framework.testScript.BookingPageTestScript" hash-for-method="bookingSingleRoomWithThreeAdults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdu...)">bookingSingleRoomWithThreeAdults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdu...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
->>>>>>> 16081c7894f3e57fc6b606d1e526ad4eaabb03e7
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -140,11 +117,7 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-<<<<<<< HEAD
-          <div class="suite-Default_suite-class-passed">
-=======
           <div class="suite-Default_suite-class-failed">
->>>>>>> 16081c7894f3e57fc6b606d1e526ad4eaabb03e7
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
               <span class="class-name">com.tripmasters.framework.testScript.BookingPageTestScript</span>
@@ -152,26 +125,15 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-<<<<<<< HEAD
-                  <a name="bookingTwoRoomTwoAdult_TC_3(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomTwoAdult_TC_3(j...)">
-                  </a> <!-- bookingTwoRoomTwoAdult_TC_3(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomTwoAdult_TC_3(j...) -->
-                  <span class="method-name">bookingTwoRoomTwoAdult_TC_3</span>
-                  <span class="parameters">(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomTwoAdult_TC_3(java.lang.reflect.Method) throws java.lang.Exception)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
-        </div> <!-- panel Default_suite -->
-        <div panel-name="test-xml-Default_suite" class="panel">
-          <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/1t/skflvzy92gb4hm75_dmcs0th0000gn/T/testng-eclipse-358956341/testng-customsuite.xml</span>
-=======
-                  <a name="bookingSingleRoomOneAdultOneChild_TC_2(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomOneAdultOneC...)">
-                  </a> <!-- bookingSingleRoomOneAdultOneChild_TC_2(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomOneAdultOneC...) -->
-                  <span class="method-name">bookingSingleRoomOneAdultOneChild_TC_2</span>
-                  <span class="parameters">(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomOneAdultOneChild_TC_2(java.lang.reflect.Method) throws java.lang.Exception)</span>
-                  <div class="stack-trace">java.lang.NullPointerException
-	at com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomOneAdultOneChild_TC_2(BookingPageTestScript.java:179)
+                  <a name="bookingSingleRoomWithThreeAdults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdu...)">
+                  </a> <!-- bookingSingleRoomWithThreeAdults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdu...) -->
+                  <span class="method-name">bookingSingleRoomWithThreeAdults_TC_1</span>
+                  <span class="parameters">(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method) throws java.lang.Exception)</span>
+                  <div class="stack-trace">java.lang.Exception: Unable to scroll page
+	at com.tripmasters.framework.base.PageBase.scrollDown(PageBase.java:398)
+	at com.tripmasters.framework.pageActions.BookingPageAction.selectCheaperFlights_Mob(BookingPageAction.java:145)
+	at com.tripmasters.framework.pageActions.BookingPageAction.selectCheaperFlights(BookingPageAction.java:130)
+	at com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(BookingPageTestScript.java:53)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
@@ -209,17 +171,12 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\91807\AppData\Local\Temp\testng-eclipse--657964487\testng-customsuite.xml</span>
->>>>>>> 16081c7894f3e57fc6b606d1e526ad4eaabb03e7
+            <span class="header-content">C:\Users\91807\AppData\Local\Temp\testng-eclipse--1199647052\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
-<<<<<<< HEAD
-&lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-=======
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
->>>>>>> 16081c7894f3e57fc6b606d1e526ad4eaabb03e7
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
@@ -251,11 +208,7 @@
               <span class="test-group-name">smoke</span>
               <br/>
               <div class="method-in-group">
-<<<<<<< HEAD
-                <span class="method-in-group-name">bookingTwoRoomTwoAdult_TC_3</span>
-=======
-                <span class="method-in-group-name">bookingSingleRoomOneAdultOneChild_TC_2</span>
->>>>>>> 16081c7894f3e57fc6b606d1e526ad4eaabb03e7
+                <span class="method-in-group-name">bookingSingleRoomWithThreeAdults_TC_1</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -277,24 +230,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-<<<<<<< HEAD
-data.setCell(0, 1, 'bookingTwoRoomTwoAdult_TC_3')
+data.setCell(0, 1, 'bookingSingleRoomWithThreeAdults_TC_1')
 data.setCell(0, 2, 'com.tripmasters.framework.testScript.BookingPageTestScript')
-data.setCell(0, 3, 195729);
-=======
-data.setCell(0, 1, 'bookingSingleRoomOneAdultOneChild_TC_2')
-data.setCell(0, 2, 'com.tripmasters.framework.testScript.BookingPageTestScript')
-data.setCell(0, 3, 178504);
->>>>>>> 16081c7894f3e57fc6b606d1e526ad4eaabb03e7
+data.setCell(0, 3, 35732);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-<<<<<<< HEAD
-              <span class="suite-total-time">Total running time: 3 minutes</span>
-=======
-              <span class="suite-total-time">Total running time: 2 minutes</span>
->>>>>>> 16081c7894f3e57fc6b606d1e526ad4eaabb03e7
+              <span class="suite-total-time">Total running time: 35 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -326,15 +269,10 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-<<<<<<< HEAD
-                <span class="method-name">bookingTwoRoomTwoAdult_TC_3(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomTwoAdult_TC_3(j...)</span>
-                <span class="method-start">11725 ms</span>
-=======
                 <img src="failed.png">
                 </img>
-                <span class="method-name">bookingSingleRoomOneAdultOneChild_TC_2(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomOneAdultOneC...)</span>
-                <span class="method-start">23839 ms</span>
->>>>>>> 16081c7894f3e57fc6b606d1e526ad4eaabb03e7
+                <span class="method-name">bookingSingleRoomWithThreeAdults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdu...)</span>
+                <span class="method-start">25989 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
