--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,19 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<td>bookingTwoRoomTwoAdult_TC_3</td>
-=======
-<td>bookingSingleRoomOneAdultOneChild_TC_2</td>
->>>>>>> 16081c7894f3e57fc6b606d1e526ad4eaabb03e7
-=======
-<td>bookingDetailswithPremiumEcomomy_TC_18</td>
->>>>>>> 348e31002cad392248c9e8aedab9e55d1688ee18
-=======
 <td>bookingSingleRoomWithThreeAdults_TC_1</td>
->>>>>>> 5042e9c4e1ca4df7dc88ad982ffb96d98e627cb5
 <td>smoke </td>
 </tr>
 <tr>
@@ -39,6 +27,10 @@
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
