--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<tr bgcolor="657a99">  <td>20/02/21 05:07:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@4bbfb90a]">&gt;&gt;setUp</td> 
-=======
-<tr bgcolor="657a99">  <td>20/02/24 23:54:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@4bbfb90a]">&gt;&gt;setUp</td> 
->>>>>>> 348e31002cad392248c9e8aedab9e55d1688ee18
-<td>&nbsp;</td>  <td>main@141289226</td>   <td></td> </tr>
-<tr bgcolor="bca669">  <td>20/02/24 23:54:23</td>   <td>13453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingDetailswithPremiumEcomomy_TC_18(java.lang.reflect.Method)[pri:12, instance:com.tripmasters.framework.testScript.BookingPageTestScript@4bbfb90a]">bookingDetailswithPremiumEcomomy_TC_18</td> 
-  <td>main@141289226</td>   <td></td> </tr>
-=======
-<tr bgcolor="a863b6">  <td>20/02/24 16:19:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@69b0fd6f]">&gt;&gt;setUp</td> 
-=======
-<tr bgcolor="a863b6">  <td>20/02/25 14:13:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@69b0fd6f]">&gt;&gt;setUp</td> 
->>>>>>> 5042e9c4e1ca4df7dc88ad982ffb96d98e627cb5
-<td>&nbsp;</td>  <td>main@1151593579</td>   <td></td> </tr>
-<tr bgcolor="9286a3">  <td>20/02/25 14:14:10</td>   <td>25989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@69b0fd6f]">bookingSingleRoomWithThreeAdults_TC_1</td> 
-  <td>main@1151593579</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>20/02/25 16:59:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5442a311]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1234776885</td>   <td></td> </tr>
+<tr bgcolor="99f37e">  <td>20/02/25 17:00:11</td>   <td>16112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5442a311]">bookingSingleRoomWithThreeAdults_TC_1</td> 
+  <td>main@1234776885</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>20/02/25 17:01:12</td>   <td>77160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5442a311]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1234776885</td>   <td></td> </tr>
 </table>
