--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -11,20 +11,8 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingDetailswithPremiumEcomomy_Mob_TC_18</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>removeAddedCity_TC_17_mobile</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingFlightAndHotelForMultipleCity_TC_8_iOS</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingTwoRoomTwoAdultTwoChild_TC_5</td>
-<td>testdemo </td>
+<td>bookingSingleRoomWithThreeAdults_TC_1</td>
+<td>smoke </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -39,6 +27,10 @@
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
