--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="846679">  <td>20/02/20 13:05:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingTwoRoomTwoAdultTwoChild_TC_5(java.lang.reflect.Method)[pri:5, instance:com.tripmasters.framework.testScript.BookingPageTestScript@627551fb]">bookingTwoRoomTwoAdultTwoChild_TC_5</td> 
-  <td>pool-1-thread-1@311725453</td>   <td></td> </tr>
-<tr bgcolor="7faa95">  <td>20/02/20 13:05:08</td>   <td>-15277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@627551fb]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@311725453</td>   <td></td> </tr>
+<tr bgcolor="80ebad">  <td>20/02/25 17:02:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@239963d8]">bookingSingleRoomWithThreeAdults_TC_1</td> 
+  <td>pool-1-thread-1@1454382205</td>   <td></td> </tr>
+<tr bgcolor="83a2f9">  <td>20/02/25 17:02:03</td>   <td>-17792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@239963d8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@1454382205</td>   <td></td> </tr>
+<tr bgcolor="83a2f9">  <td>20/02/25 17:04:26</td>   <td>125348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@239963d8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@1454382205</td>   <td></td> </tr>
 </table>
