--- a/test-output/old/index.html
+++ b/test-output/old/index.html
@@ -1,27 +1,9 @@
 <html>
-<head><title></title><link href="./testng.css" rel="stylesheet" type="text/css" />
+<head><title>Test results</title><link href="./testng.css" rel="stylesheet" type="text/css" />
 <link href="./my-testng.css" rel="stylesheet" type="text/css" />
 </head><body>
 <h2><p align='center'>Test results</p></h2>
 <table border='1' width='100%' class='main-page'><tr><th>Suite</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>testng.xml</th></tr>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
 <tr align='center' class='invocation-passed'><td><em>Total</em></td><td><em>1</em></td><td><em>0</em></td><td><em>0</em></td><td>&nbsp;</td></tr>
-<tr align='center' class='invocation-passed'><td><a href='Default suite/index.html'>Default suite</a></td>
-<td>1</td><td>0</td><td>0</td><td><a href='Default suite/testng.xml.html'>Link</a></td></tr></table></body></html>
-=======
-<tr align='center' class='invocation-failed'><td><em>Total</em></td><td><em>0</em></td><td><em>1</em></td><td><em>0</em></td><td>&nbsp;</td></tr>
-<tr align='center' class='invocation-failed'><td><a href='Default suite/index.html'>Default suite</a></td>
-<td>0</td><td>1</td><td>0</td><td><a href='Default suite/testng.xml.html'>Link</a></td></tr></table></body></html>
->>>>>>> 16081c7894f3e57fc6b606d1e526ad4eaabb03e7
-=======
-<tr align='center' class='invocation-failed'><td><em>Total</em></td><td><em>0</em></td><td><em>1</em></td><td><em>0</em></td><td>&nbsp;</td></tr>
-<tr align='center' class='invocation-failed'><td><a href='Default suite/index.html'>Default suite</a></td>
-<td>0</td><td>1</td><td>0</td><td><a href='Default suite/testng.xml.html'>Link</a></td></tr></table></body></html>
->>>>>>> 348e31002cad392248c9e8aedab9e55d1688ee18
-=======
-<tr align='center' class='invocation-failed'><td><em>Total</em></td><td><em>0</em></td><td><em>1</em></td><td><em>0</em></td><td>&nbsp;</td></tr>
-<tr align='center' class='invocation-failed'><td><a href='Default suite/index.html'>Default suite</a></td>
-<td>0</td><td>1</td><td>0</td><td><a href='Default suite/testng.xml.html'>Link</a></td></tr></table></body></html>
->>>>>>> 5042e9c4e1ca4df7dc88ad982ffb96d98e627cb5
+<tr align='center' class='invocation-passed'><td><a href='Suite/index.html'>Suite</a></td>
+<td>1</td><td>0</td><td>0</td><td><a href='Suite/testng.xml.html'>Link</a></td></tr></table></body></html>
